// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Minimal event should match snapshot. 1`] = `
<tr
  className="activity-run"
>
  <td
    className="data-date"
  >
    <span
      className="value"
    >
      -
    </span>
  </td>
  <td
    className="data-category"
  >
    <span
      className="glyphicon glyphicon-road"
    />
     
    <span
      className="value"
    >
      -
    </span>
  </td>
  <td
    className="data-distance"
  >
    <span
      className="value"
    >
      -
    </span>
  </td>
  <td
    className="data-duration"
  >
    <span
      className="value"
    >
      -
    </span>
  </td>
  <td
    className="data-notes"
  >
    <span
      className="value"
    >
      -
    </span>
  </td>
  <td
    className="data-actions"
  >
    <a
      className="glyphicon glyphicon-heart-empty"
      href="#"
    />
    <a
      className="glyphicon glyphicon-pencil"
      href="#"
    />
    <a
      className="glyphicon glyphicon glyphicon-trash"
      href="#"
    />
  </td>
</tr>
`;

exports[`Sample event with all fields defined should match snapshot 1`] = `
<tr
  className="activity-run"
>
  <td
    className="data-date"
  >
    <span
      className="value"
    >
      Today
    </span>
  </td>
  <td
    className="data-category"
  >
    <span
      className="glyphicon glyphicon-road"
    />
     
    <span
      className="value"
    >
      casual
    </span>
  </td>
  <td
    className="data-distance"
  >
    <span
      className="value"
    >
      5 mi
    </span>
  </td>
  <td
    className="data-duration"
  >
    <span
      className="value"
    >
      50m 0s
    </span>
  </td>
  <td
    className="data-notes"
  >
    <span
      className="value"
    >
      Just a test.
    </span>
  </td>
  <td
    className="data-actions"
  >
    <a
      className="glyphicon glyphicon-heart-empty"
      href="#"
    />
    <a
      className="glyphicon glyphicon-pencil"
      href="#"
    />
    <a
      className="glyphicon glyphicon glyphicon-trash"
      href="#"
    />
  </td>
</tr>
`;
